@@ -52,7 +52,8 @@ Config::Set('URL_REWRITE', array(	'default'=>array('module', 'page'),
 									'Pilots'=>array('module', 'page', 'pilotid'),
 									'Profile'=>array('module', 'page', 'pilotid'),
 									'Schedules'=>array('module', 'page', 'id'),
-									'ACARS'=>array('module', 'page', 'action')));
+									'ACARS'=>array('module', 'page', 'action'),
+									'XML'=>array('module', 'request')));
 							
 /**
  * Constants
