@@ -34,7 +34,6 @@ class ACARSData extends CodonModule
 			return false;
 		}
 		
-
 		// make sure at least the vitals we need are there:
 		if($data['pilotid'] == '')
 		{
@@ -141,86 +140,6 @@ class ACARSData extends CodonModule
 					WHERE DATE_SUB(NOW(), INTERVAL '.$cutofftime.' HOUR) <= lastupdate';
 					
 		return DB::get_results($sql);
-	}
-	
-	/**
-	 * This generates the XML for the live ACARS map
-	 */
-	public function GenerateXML()
-	{
-		$output = '';
-		$flights = self::GetACARSData(Config::Get('ACARS_LIVE_TIME'));
-		
-		$output = '<livemap>';
-		
-		foreach($flights as $flight)
-		{
-			#
-			# Grab some basic info about the pilot
-			#			
-			preg_match('/^([A-Za-z]{2,3})(\d*)/', $flight->pilotid, $matches);
-			$pilotid = $matches[2];
-			$pilotinfo = PilotData::GetPilotData($pilotid);
-			
-			#
-			# Start our output
-			#
-			
-			$output.='<aircraft flightnum="'.$flight->flightnum.'" lat="'.$flight->lat.'" lng="'.$flight->lng.'">';
-			
-			
-			#
-			# Pilot and Route Information
-			#
-			
-			$output.='<pilotid>'.$flight->pilotid.'</pilotid>';
-			$output.='<pilotname>'. $pilotinfo->firstname.' '.$pilotinfo->lastname.'</pilotname>';
-			$output.='<depicao>'.$flight->depicao.'</depicao>';
-			$output.='<arricao>'.$flight->arricao.'</arricao>';
-			$output.='<distremain>'.$flight->distremain.'</distremain>';
-			$output.='<timeremain>'.$flight->timeremaining.'</timeremain>';
-			
-			#
-			# Set the icon
-			#
-			$output.='<icon>';
-			
-			if($flight->phasedetail != 'Boarding' && $flight->phasedetail != 'Taxiing'
-				&& $flight->phasedetail != 'FSACARS Closed' && $flight->phasedetail != 'Taxiiing to gate'
-				&& $flight->phasedetail != 'Landed' && $flight->phasedetail != 'Arrived')
-			{
-				$output.=SITE_URL.'/lib/images/inair.png';
-			}
-			else
-			{
-				$output.=SITE_URL.'/lib/images/onground.png';
-			}
-			
-			$output.='</icon>';
-		
-			
-			#
-			# Show their specific flight data
-			#
-			$output.='<details><![CDATA['
-					.'<span style="font-size: 10px; text-align:left; width: 100%" align="left">'
-					.'<a href="'.SITE_URL.'/index.php/profile/view/'.$flight->pilotid.'">'.$flight->pilotid.' - ' . $pilotinfo->firstname .' ' . $pilotinfo->lastname.'</a><br />'
-					.'<strong>Flight '.$flight->flightnum.'</strong> ('.$flight->depicao.' to '.$flight->arricao.')<br />'
-					.'<strong>Phase: </strong>'.$flight->phasedetail.'<br />'
-					.'<strong>Dist/Time Remain: </strong>'.$flight->distremain.Config::Get('UNITS').'/'.$flight->timeremaining.' h:m<br />'
-					.'</span>'
-					.']]></details>';
-			
-			#
-			# End the aircraft info
-			#
-			
-			$output.='</aircraft>';
-		}
-		
-		$output.='</livemap>';
-		
-		return $output;
 	}
 }
 ?>
